Another try at CSS-animated loading dots; fixes #25
For posterity: before, the keyframe animation changed a bullet's color.
The animation was applied to each of three elements, with each element
getting a successively-larger animation-delay. The trouble is that the
browser doesn't know that these three (separately-applied) animations
are related, so they can be timed separately from one another.

Solution: add a fourth dot, in the bronze color. The animation applies
only to it, and adjusts its position to cover up each of the other three
dots in turn. Seems to work!

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -90,28 +90,34 @@ button, .button, .button-arrow
     content: ""
     display: block
 
-// <div class="loading-dots"><b></b><b></b><b></b></div>
+// <div class="loading-dots"><b></b><b></b><b></b><b class="x"></b></div>
 .loading-dots
+  clearfix()
   font: bold 40px/10px ProximaNova
   color: cabin_grey_med
+  transform: translateZ(0)  // try for GPU rendering
   b
+    float: left
+    width: 10px
+  b:before
+    content: "·"
+    display: inline-block
+  b.x
+    absolute: left top
     animation-name: loading-dots
-    animation-delay: 0
     animation-duration: 1s
     animation-timing-function: steps(1)
     animation-iteration-count: infinite
-    &:before
-      content: "·"
-      display: inline-block
-  b:nth-child(2)
-    animation-delay: 200ms
-  b:nth-child(3)
-    animation-delay: 400ms
-@keyframes loading-dots
-  from
     color: cabin_bronze
+@keyframes loading-dots
+  0%
+    left: 0
   20%
-    color: cabin_grey_med
+    left: 10px
+  40%
+    left: 20px
+  60%
+    visibility: hidden
 
 
 // Set the overall page width either to a max value (if passed a single
@@ -124,6 +130,7 @@ page-width(args...)
       min-width: args[0]
       max-width: args[1]
 
+
 // Lazy man's custom checkboxes; applying these styles allows styling the input
 // element as a normal element on WebKit browsers. Falls back to a normal
 // checkbox in other browsers. If we need to support other browsers later,
@@ -134,6 +141,7 @@ custom-checkbox()
   border-radius: 0
   border: none
   cursor: pointer
+
 
 hover-hr(duration = 200ms)
   position: relative
